fix(rootcolor): only apply the background image to :root; improve all root(color|scrolllock|scrollgutter) (#4354)
* fix(rootcolor): only apply the background image to :root

- only :root needs to cover the scrollbar gutter
- applying background to data-theme will break background for themes applied in dropdown (see theme generator - CSS viewer)

* feat: improve separation of concerns for root(color|scrollgutter|scrolllock)

- use space variables to avoid need for if()
- use background-image and background-color instead of full background
- only apply changed background-color on :root (avoid changing the backgrounds for themed elements)
- move styles from modal and drawer in rootscrollgutter where they belong, and only control if they need to be applied from modal and drawer

--- a/packages/daisyui/src/base/rootscrolllock.css
+++ b/packages/daisyui/src/base/rootscrolllock.css
@@ -1,3 +1,8 @@
+:root {
+  --page-scroll-lock: initial;
+  --page-overflow: var(--page-scroll-lock) hidden;
+}
+
 /* force higher specificity */
 :root:not(span) {
   overflow: var(--page-overflow);
